<resources>
    <string name="app_name">LoFo</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="masukkan_nama_lengkap"> Masukkan Nama Lengkap</string>
    <string name="masukkan_jenis_kelamin">Laki-laki / Perempuan</string>
    <string name="masukkan_nomor_handphone">Masukkan Nomor Handphone</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="title_activity_baranghilang">Barang Hilang</string>
    <string name="masukkan_namaBarang">Masukkan Nama Barang</string>
    <string name="masukkan_tempatKehilangan">Masukkan Tempat Kehilangan</string>
    <string name="masukkan_tempatPenemuan">Masukkan Tempat Penemuan</string>
    <string name="masukkan_pertanyaan">Masukkan Pertanyaan Mengenai Barang</string>
    <string name="masukkan_informasiDetail">Masukkan Informasi Detail dari Barang</string>
</resources>