<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.register.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/back"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/left"
            android:clickable="true"
            android:focusable="true"
            >
        </ImageView>

        <TextView
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_bold"
            android:text="Register"
            android:textSize="36dp"
            android:layout_marginBottom="30dp"
            >
        </TextView>

        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Username"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:id="@+id/username"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"

            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:hint="@string/masukkan_username"
            android:textSize="16sp"
            >
        </EditText>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Email"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:id="@+id/email"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:hint="@string/masukkan_email"
            android:textSize="16sp"
            >
        </EditText>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Password"
            android:textSize="20dp"
            >
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/password"
                android:layout_width="304dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:hint="Masukkan Password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingEnd="50dp" /> <!-- Biar gak ketimpa icon -->

            <ImageView
                android:id="@+id/showPasswordIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/eye_off"
                android:layout_alignEnd="@id/password"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:padding="5dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Konfirmasi Password"
            android:textSize="20dp"
            >
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/konfirmasiPassword"
                android:layout_width="304dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:hint="Masukkan Konfirmasi Password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingEnd="50dp" /> <!-- Biar gak ketimpa icon -->

            <ImageView
                android:id="@+id/showKonfirmasiPasswordIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/eye_off"
                android:layout_alignEnd="@id/konfirmasiPassword"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:padding="5dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Nama Lengkap"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:id="@+id/namaLengkap"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:hint="@string/masukkan_nama_lengkap"
            android:textSize="16sp"
            >
        </EditText>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Jenis Kelamin"
            android:textSize="20dp"
            >
        </TextView>
        <Spinner
            android:id="@+id/jenisKelamin"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            />
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Alamat"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:id="@+id/alamat"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:hint="@string/masukkan_alamat"
            android:textSize="16sp"
            >
        </EditText>
        <TextView
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_light"
            android:text="Nomor Handphone"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:id="@+id/nomorHandphone"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:hint="@string/masukkan_nomor_handphone"
            android:inputType="phone"
            android:digits="0123456789"
            android:textSize="16sp"
            >
        </EditText>
        <Button
            android:id="@+id/register"
            android:layout_width="304dp"
            android:layout_height="64dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#005EFF"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_bold"
            android:textAlignment="center"
            android:text="Register"
            android:textSize="24dp"
            >
        </Button>

    </LinearLayout>

</ScrollView>